--- a/common_style.css
+++ b/common_style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 .wrapper {
@@ -23,13 +24,19 @@ body {
   background-color: #fff;
   border-radius: 0;
   border: 1px solid #ddd;
-  height: 40px;
+  height: 36px;
   min-width: 50px;
   text-align: center;
   color: #d19c97;
+  margin-right: 10px;
 }
 
 .common-button span {
   font-size: 16px;
   font-weight: 800;
+}
+
+.common-button span i {
+  padding-left: 5px;
+  padding-right: 5px;
 }
