--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .header {
   margin-top: 25px;
+  min-height: 60px;
 }
 
 .logo h1 {
-  font-size: 38px;
+  font-size: 32px;
   font-weight: 600;
   margin: 0;
 }
@@ -43,4 +44,42 @@
 
 .selected-product {
   text-align: right;
+}
+
+.full-banner-wrapper {
+  border-top: 1px solid #ddd;
+}
+
+.list-header {
+  height: 65px;
+  background-color: #d19c97;
+}
+
+.list-header h4 {
+  display: inline-block;
+  margin-left: 40px;
+  margin-right: 40px;
+  font-weight: 500;
+}
+
+.list-header span {
+  float: right;
+  padding: 24px;
+}
+
+.category-list ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  border: 1px solid #ddd;
+}
+
+.category-list ul li {
+  border-bottom: 1px solid #ddd;
+  padding: 10px 40px;
+}
+
+.category-list ul li a {
+  color: #333;
+  text-decoration: none;
 }
