--- a/style.css
+++ b/style.css
@@ -128,3 +128,49 @@
 .dropdown-head:hover ul.dropdown {
   display: block;
 }
+
+.banner {
+  float: left;
+  position: relative;
+  height: 400px;
+  width: 100%;
+  margin-left: 15px;
+}
+
+.banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.banner-text {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  color: #fff;
+  background-color: #3333338c;
+}
+
+.banner-text h4 {
+  font-size: 28px;
+  text-transform: uppercase;
+  margin: 0;
+  font-weight: 500;
+}
+
+.banner-text h3 {
+  margin: 0;
+  font-size: 50px;
+}
+
+.banner-text a.shop-now {
+  background-color: #fff;
+  color: #000;
+  padding: 10px 15px;
+}
