added category items

--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@
 .banner-text h3 {
   margin: 0;
   font-size: 50px;
+  text-transform: capitalize;
 }
 
 .banner-text a.shop-now {
@@ -197,4 +198,25 @@
   font-size: 16px;
   padding-left: 20px;
   font-weight: 600;
+}
+
+.category-item {
+  border: 1px solid #ccc;
+  padding: 30px;
+  margin-right: 25px;
+  margin-top: 25px;
+}
+
+.category-item .product-count {
+  text-align: right;
+  margin-bottom: 10px;
+}
+
+.category-item .category-img img {
+  width: 100%;
+}
+
+.category-item .category-type h5 {
+  margin-bottom: 0;
+  font-size: 20px;
 }
